--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ header.row h1 {
   text-transform: uppercase;
   border-radius: 300px;
   font-family: 'Montserrat', sans-serif;
+  align-content: center;
+  align-items: center;
 }
 
 .btn-xl {
